<resources>
    <string name="app_name">Mattermost Native Client</string>

    <string name="please_wait">Please wait…</string>
    <string name="your_session_has_expired">Your session has expired</string>
    <string name="example_server">http://server.com/</string>
    <string name="proceed">Proceed</string>
    <string name="enter_mattermost_server_url">Enter Mattermost Server URL</string>
    <string name="next">Next</string>
    <string name="welcome_to_mattermost">Welcome to Mattermost</string>
    <string name="invalid_server_url">We could not connect to the Mattermost server or the server is running in an incompatible version</string>
    <string name="no_teams_received">Could not receive teams</string>
    <string name="please_enter_your_credentials">Please Enter Your Credentials</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="unknown">UNKNOWN</string>
    <string name="all_your_team_communication">All your team communication in one\nplace, searchable and accessible\nanywhere.</string>
    <string name="enter_server_url_capt">ENTER SERVER URL</string>
    <string name="your_team">Select your team</string>
    <string name="email_capt">EMAIL</string>
    <string name="password_capt">PASSWORD</string>
    <string name="content_descr_back">Back</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reply">Reply</string>
    <string name="new_message_received">New message received"</string>

    <string name="password_request_sent">Password reset request has been sent</string>

    <string name="edit_message">Edit Message</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>

    <string name="could_not_receive_teams">Could not receive teams</string>
    <string name="example_message_preview">Message Preview will be displayed here</string>

    <string name="no_channels_available">No Channels Available</string>
    <string name="no_groups_available">No Groups Available</string>
    <string name="no_direct_chats_available">No Direct Chats Available</string>
    <string name="no_unread_chats_available">No Unread Messages</string>
    <string name="no_favorite_chats_available">No Favorite Chats Available</string>

    <string name="action_search">Search</string>
    <string name="action_apply">Apply</string>

    <string name="default_server_text" />
    <string name="default_login_text" />
    <string name="default_password" />

    <string name="message">Message…</string>
    <string name="loading">Loading…</string>
    <string name="no_messages_here_yet">No messages here yet</string>
    <string name="no_users_to_display">No users found</string>
    <string name="channel_preview_message_placeholder">No messages yet</string>

    <string name="start_new_direct_chat">Start new direct chat</string>
    <string name="create_channel">Create channel</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="create_channel_title_name">Name</string>
    <string name="username">Username</string>
    <string name="private_channel">Private</string>
    <string name="public_channel">Public</string>
    <string name="create_channel_description_title">Purpose</string>
    <string name="search_people_for_channel_hint">Search</string>
    <string name="added_people_count" translatable="false">+%1$d</string>
    <string name="button_add_all">Add all</string>
    <string name="action_create_channel">Create channel</string>
    <string name="action_delete_channel">Delete channel</string>
    <string name="delete_channel_confirm_dialog_msg">Are you sure you want to delete this channel?</string>
    <string name="new_public_channel">New public channel</string>
    <string name="new_private_group">New private group</string>
    <string name="post_delete">Message Delete</string>
    <string name="are_you_sure_you_want_to_delete_this_post">Are you sure you want to delete this message?</string>
    <string name="error_channel_name_empty">Please, name your channel</string>
    <string name="error_private_group_name_empty">Please, name your private group</string>
    <string name="error_channel_already_created">Oops, this name is already taken</string>

    <string name="edit_public_channel">Edit public channel</string>
    <string name="edit_private_group">Edit private group</string>
    <string name="edit_channel">Edit</string>
    <string name="leave_channel">Leave channel</string>
    <string name="leave">Leave</string>

    <string name="channel_post_author_name_format">%s:\u0020</string>
    <string name="you">You</string>
    <string name="chat_you">You:</string>
    <string name="new_message">New Message</string>
    <string name="search">Search</string>
    <string name="create_chat_hint_name">Example: Project name, Bugs, Sales</string>
    <string name="create_private_group_description_hint">What are you going to discuss in this group</string>
    <string name="create_public_channel_description_hint">What are you going to discuss in this channel</string>
    <string name="added_members_title">Added members</string>
    <string name="settings_unread_tabs_content">Enable unread tabs</string>
    <string name="settings_unread_tabs_title">Unread tabs</string>

    <string name="email">Email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="send_invitation_capt">SEND INVITATION</string>
    <string name="invitation_info">People invited automatically join the\n<b>Town Square</b> channel.</string>
    <string name="invitation_sent">New member invitation has been sent</string>

    <string name="error_email_empty">The entered email is empty</string>
    <string name="error_email_invalid">The entered email is invalid</string>
    <string name="error_username_invalid">The entered username is invalid</string>
    <string name="error_invitation_sending_failed">Invitation sending failed</string>

    <array name="post_own_opinion_array">
        <item>Delete</item>
        <item>Edit</item>
        <item>Reply</item>
    </array>

    <array name="post_own_opinion_fail_array">
        <item>Retry</item>
        <item>Delete</item>
    </array>

    <array name="post_opinion_array">
        <item>Reply</item>
    </array>

    <string name="gcm_sender_id">400589284558</string>
    <string name="search_with_ellipsis">Search…</string>
    <string name="new_group_or_channel">New group or channel</string>
    <string name="invite_new_member">Invite new member</string>
    <string name="invite_new_member_capt">Invite New Member</string>
    <string name="channel_display_name_format">#%s</string>
    <string name="members">Members</string>
    <string name="make_favorite">Make favorite</string>
    <string name="edit_profile">Edit profile</string>
    <string name="unread_messages">Unread messages</string>
    <string name="add_members">Add members</string>
    <string name="button_clear">Cancel</string>
    <string name="direct_message">Direct message</string>
    <string name="unknown_error">Something is wrong</string>
    <string name="empty_state">No results found. Try again?</string>
    <string name="search_user_empty_state">No users found</string>
    <string name="find_more_channels">Find more channels</string>
    <string name="quantity_one_member">%d member</string>
    <string name="quantity_many_members">%d members</string>
    <string name="public_channel_name">#%s</string>
    <string name="message_preview_format">%1$s %2$s</string>
    <string name="join">Join</string>
    <string name="join_offer">Do you want to join #%s?</string>

    <string name="header_message">Messages</string>
    <string name="header_channel">Channels</string>
    <string name="header_people">People</string>
    <string name="go_to_dialog">Go to dialogue</string>
    <string name="message_details">Message details</string>
    <string name="are_you_sure_want_to_leave_channel">Are you sure you want to leave the channel?</string>
    <string name="message_delete_title">Message Delete</string>
    <string name="error_user_invited">User already invited</string>

    <string name="url">url</string>
    <string name="attachment">Attachment</string>

    <string name="please_grant_permission">Please grant the permission</string>

</resources>
