<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin_fixed_text"
    android:paddingStart="@dimen/activity_horizontal_margin_fixed_text"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.ChooseServerActivity">

    <TextView
        android:id="@+id/tv_welcome"
        style="@style/TextWelcomeHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/welcome_screen_headers_margin_top"
        android:gravity="center_horizontal"
        android:text="@string/welcome_to_mattermost" />

    <TextView
        android:id="@+id/tv_subheading"
        style="@style/TextHeadingSecondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_welcome"
        android:layout_marginBottom="@dimen/welcome_screen_headers_margin_bottom"
        android:gravity="center_horizontal"
        android:padding="@dimen/text_heading_padding"
        android:text="@string/all_your_team_communication" />

    <TextView
        android:id="@+id/tv_url"
        style="@style/TextHeadingSecondary.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_subheading"
        android:paddingEnd="@dimen/edit_text_align"
        android:paddingStart="@dimen/edit_text_align"
        android:text="@string/enter_server_url_capt" />

    <Spinner
        android:id="@+id/sp_http"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_server"
        android:layout_below="@id/tv_url"
        android:entries="@array/http_types"
        android:visibility="gone" />

    <android.support.v7.widget.AppCompatAutoCompleteTextView
        android:id="@id/et_server"
        style="@style/EditTextPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_url"
        android:layout_toEndOf="@id/sp_http"
        android:hint="@string/example_server"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:text="@string/default_server_text" />

    <com.applikey.mattermost.views.SafeButton
        android:id="@+id/b_proceed"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/edit_text_align"
        android:layout_marginStart="@dimen/edit_text_align"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/next" />

</RelativeLayout>
