<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.LogInActivity">

    <Spinner
        android:id="@+id/sp_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_enter_credentials"
        android:hint="@string/email"
        android:maxLines="1"
        android:text="@string/default_login_text" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_login"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1" />

    <Button
        android:id="@+id/b_authorize"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/authorize" />

    <TextView
        android:id="@+id/tv_enter_credentials"
        style="@style/TextWelcomeHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sp_team"
        android:gravity="center_horizontal"
        android:text="@string/please_enter_your_credentials" />
</RelativeLayout>
