<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_background"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppToolbar"
            app:navigationIcon="@drawable/ic_back" />
    </android.support.design.widget.AppBarLayout>

    <com.devspark.robototextview.widget.RobotoTextView
        style="@style/SettingsElement"
        android:id="@+id/btn_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_element_height"
        android:layout_marginTop="@dimen/small"
        android:drawableEnd="@drawable/ic_forward_shevron"
        android:gravity="center_vertical"
        android:paddingEnd="@dimen/normal"
        android:paddingStart="@dimen/normal"
        android:text="@string/edit_profile"
        app:typeface="roboto_light" />

    <com.devspark.robototextview.widget.RobotoSwitch
        android:id="@+id/sw_show_unread_messages"
        style="@style/SettingsElement"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_element_height"
        android:layout_gravity="center_vertical|end"
        android:layout_marginTop="@dimen/margin_settings_elements"
        app:typeface="roboto_light"
        android:paddingEnd="@dimen/normal"
        android:paddingStart="@dimen/normal"
        android:text="@string/unread_messages"
        android:theme = "@style/SwitchStyle"/>

    <com.devspark.robototextview.widget.RobotoTextView
        style="@style/SettingsElement"
        android:id="@+id/btn_setting_logout"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/small"
        android:layout_height="@dimen/settings_element_height"
        android:paddingEnd="@dimen/normal"
        android:paddingStart="@dimen/normal"
        android:gravity="center_vertical"
        android:text="@string/logout"
        app:typeface="roboto_light" />

</LinearLayout>
